# qgames-server

./: .gitignore  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
common/: base64.c  log.h  packer.c  packer.h
common/cJSON/: cJSON.c  cJSON.h  cYAML.c
src/: Makefile.am  Makefile.in  dbmanager.c  dbmanager.h  game_types.c  game_types.h  games.c  games.h  qgserver-tool.c  qgserverd.c  session.c  session.h  users.c  users.h
stress/: functions.sh  jubilado.sh  test.sh
test/: Makefile.am  Makefile.in  test-check-user-game.c  test-create-game-type.c  test-create-game.c  test-create-session.c  test-create-user.c  test-cursor-game-type.c  test-db-create-file.c  test-del-game.c  test-dup-user.c  test-main.c  test-routes.c  test.qgame
test/webservice/: test-lista-registraciones.sh  test-move-2.sh  test-move.sh  test-ping.sh  test-registra-desregistra.sh  test-security.sh  test-tipos-de-juego.sh  test-webservice-json.sh  test-webservice.sh
webservice/: Makefile.am  Makefile.in  qgserverd.c  routes.c  routes.l  session.c  session.h  webserver.c  webserver.h
webservice/app/: game.c  help.c  login.c  tjuego_controller.c
